objects/PPT_Currency_Symbol__c.object
<CustomObject>
    <fields>
        <fullName>PPT_Currency_Code_Key__c</fullName>
        <description>PPT Currency Code is the value and the key is &apos;PPT Currency Code key&apos; is used as a key for drop down list.Example for simplified, traditional Chinese and Russian the values are different</description>
        <label>PPT Currency Code Key</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPT_Currency_Code__c</fullName>
        <label>PPT Currency Code</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPT_Display_Code__c</fullName>
        <label>PPT Display Code</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PPT Currency Symbol</label>
    <listViews>
        <fullName>ALL_Fields</fullName>
        <columns>NAME</columns>
        <columns>PPT_Currency_Code__c</columns>
        <columns>PPT_Currency_Code_Key__c</columns>
        <columns>PPT_Display_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PPT Currency Symbol</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PPT Currency Symbols</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>